--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "nodemon": "^3.1.4"
   },
   "scripts": {
-    "dev": "nodemon",
-    "start": "node",
+    "dev": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
